# gmtk_game_jam_2024

./: Cargo.toml
.github/workflows/: release.yaml
assets/enemies/: rat.kra
src/: debug.rs  gameplay.rs  infrastructure.rs  lib.rs  main.rs  prelude.rs  tools.rs  utils.rs  view.rs
src/gameplay/: cards.rs  character.rs  enemies.rs  game_loop.rs  health.rs  unit_common.rs
src/gameplay/cards/: deck.rs  order.rs  play_card.rs  setup.rs  spawn.rs  types.rs
src/gameplay/cards/deck/: deck_component.rs  reordering.rs  unit_ownership.rs
src/gameplay/cards/deck/reordering/: view.rs
src/gameplay/cards/play_card/: invoke.rs
src/gameplay/character/: stats.rs  view.rs
src/gameplay/enemies/: ai.rs  cards.rs  enemy_type.rs
src/gameplay/enemies/ai/: turn_passing.rs
src/gameplay/game_loop/: autoplay.rs  game_turn.rs  waiting.rs
src/gameplay/game_loop/autoplay/: buttons.rs
src/gameplay/health/: components.rs  death.rs  delta.rs  view.rs
src/gameplay/health/view/: spawn.rs
src/infrastructure/: app_state.rs  assets.rs
src/tools/: debug.rs
src/utils/: constants.rs  delayed_call.rs  extensions.rs  spawn.rs
src/utils/constants/: balance.rs  colors.rs  styles.rs  view.rs
src/utils/extensions/: commands_extensions.rs  math_extensions.rs  text_extensions.rs
src/utils/spawn/: rounded_square.rs  text.rs
src/view/: camera.rs  move_to_target.rs  ui.rs
src/view/ui/: common.rs  create.rs  gameplay.rs  gameplay_hud.rs
src/view/ui/create/: button.rs  layout.rs  scroll_view.rs  text.rs
src/view/ui/gameplay/: spawn.rs
src/view/ui/gameplay_hud/: spawn.rs
