[package]
name = "gmtk_game_jam_2024"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.14"
bevy_asset_loader = { version = "0.21", features = ["2d"] }
bevy_editor_pls = { version = "0.9" }

[dev-dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }

[workspace]
resolver = "2"

## Linker
# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
